[package]
name = "pixurs"
version = "0.1.0"
authors = ["Magnus Hovland Hoff <maghoff@gmail.com>"]
description = "Photo sharing web application."
edition = "2018"

[dependencies]
structopt = "0.2.13"
r2d2 = "0.8.3"
r2d2-diesel = "1.0.0"
hyper = "0.12.13"
tokio = "0.1.11"
bart = "0.1.4"
bart_derive = "0.1.4"
chrono = "0.4.6"
web = { path = "lib/web" }
serde = "1.0.89"
serde_urlencoded = "0.5.4"
serde_derive = "1.0.89"
image = "0.21.0"
rayon = "1.0.3"
stopwatch = "0.0.7"
lazy_static = "1.3.0"
regex = "1.1.5"

[dependencies.futures-preview]
version = "0.3.0-alpha.14"
features = ["compat"]

[dependencies.diesel]
default-features = false
features = ["sqlite", "chrono"]
version = "1.3.3"

[dependencies.diesel_migrations]
default-features = false
features = ["sqlite"]
version = "1.3.0"

[dependencies.libsqlite3-sys]
features = ["bundled"]
version = "0.9.1"

[build-dependencies]
quote = "0.6.11"

[workspace]
