[package]
name = "pixurs"
version = "0.1.0"
authors = ["Magnus Hovland Hoff <maghoff@gmail.com>"]
description = "Photo sharing web application."
edition = "2018"
default-run = "pixurs"

[features]
dev-server = []

[dependencies]
structopt = "0.2.16"
r2d2 = "0.8.5"
r2d2-diesel = "1.0.0"
hyper = "0.12.30"
tokio = "0.1.21"
bart = "0.1.4"
bart_derive = "0.1.4"
chrono = "0.4.6"
web = { path = "lib/web" }
serde = "1.0.92"
serde_urlencoded = "0.6.1"
serde_derive = "1.0.92"
image = "0.21.2"
rayon = "1.2.0"
stopwatch = "0.0.7"
lazy_static = "1.3.0"
regex = "1.1.7"
jsonwebtoken = "6.0.1"
lettre = "0.9.2"
lettre_email = "0.9.2"
toml = "0.5.1"
base64 = "0.10.1"
base32 = "0.4.0"
byteorder = "1.3.2"
serde_json = "1.0.41"
kamadak-exif = "0.3.1"
async-trait = "0.1.22"

[dependencies.rand]
version = "0.7.2"
features = ["small_rng"]

[dependencies.futures-preview]
version = "0.3.0-alpha.14"
features = ["compat"]

[dependencies.diesel]
default-features = false
features = ["sqlite", "chrono"]
version = "1.4.2"

[dependencies.diesel_migrations]
default-features = false
features = ["sqlite"]
version = "1.4.0"

[dependencies.libsqlite3-sys]
features = ["bundled"]
version = "=0.12.0"

[build-dependencies]
quote = "0.6.12"

[workspace]
