[package]
name = "web"
version = "0.1.0"
authors = ["Magnus Hovland Hoff <maghoff@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.12.13"
chrono = "0.4.6"

[dependencies.futures-preview]
version = "0.3.0-alpha.9"
features = ["compat"]

[dependencies.cookie]
version = "0.12.0"
features = ["percent-encode"]
